Task instance Java/106